fixing collapse navbar styles

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -149,3 +149,8 @@ body {
     font-size: 20px;
   }
 }
+@media (min-width: 768px) {
+  #navbar ul {
+    display: none;
+  }
+}
